| Summary: | ASTERISK-22629: Bridge hangs around when DTMF feature parkcall not available | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2013-10-01 16:28:20 | Date Closed: | 2013-10-22 12:14:03 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/Bridging |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If the 'parkcall' option is set in features.conf and no parking lot exists (or no res_parking.conf file) when trying to dial with the 'Kk' options upon answering the call immediately hangs up after receiving the following message: "Requested DTMF feature parkcall not available." However, even though the call ends the simple bridge remains with num-channels=0. | ||
| Comments: | |||